// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompletedWorklistScreen Tests rendering Worklist data Renders every worklist item when all are complete 1`] = `
<Worklist
  areas={[]}
  countryCode="MX"
  data={
    [
      {
        "actionTaken": "ADD_TO_PICKLIST",
        "catgName": "FOODSERVICE",
        "catgNbr": 93,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "Nature Valley Sweet And Salty Nuts Granola Bars",
        "itemNbr": 1234567890,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "000055559999",
        "worklistStatus": "COMPLETED",
        "worklistType": "NSFL",
      },
      {
        "actionTaken": "QTY_UPDATE",
        "catgName": "ELECTRONICS",
        "catgNbr": 99,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "ELECTRONIC ITEM",
        "itemNbr": 987654321,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "777555333",
        "worklistStatus": "COMPLETED",
        "worklistType": "NO",
      },
      {
        "actionTaken": "QTY_UPDATE",
        "catgName": "FRESH BAKERY",
        "catgNbr": 88,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "BAKERY ITEM",
        "itemNbr": 123789456,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "111122223333",
        "worklistStatus": "COMPLETED",
        "worklistType": "NO",
      },
      {
        "actionTaken": "QTY_UPDATE",
        "catgName": "WINE",
        "catgNbr": 19,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "WINE ITEM",
        "itemNbr": 456789123,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "444455556666",
        "worklistStatus": "COMPLETED",
        "worklistType": "C",
      },
      {
        "actionTaken": "ADD_TO_PICKLIST",
        "catgName": "PHARMACY RX",
        "catgNbr": 87,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "PHARMACY ITEM",
        "itemNbr": 789123456,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "777788889999",
        "worklistStatus": "COMPLETED",
        "worklistType": "C",
      },
      {
        "actionTaken": "ADD_TO_PICKLIST",
        "catgName": "ELECTRONICS",
        "catgNbr": 199,
        "completed": true,
        "completedTs": undefined,
        "completedUserId": undefined,
        "itemName": "PHARMACY ITEM 1",
        "itemNbr": 789123457,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "667788889999",
        "worklistStatus": "COMPLETED",
        "worklistType": "NS",
      },
    ]
  }
  dispatch={[MockFunction]}
  enableAreaFilter={false}
  error={null}
  filterCategories={[]}
  filterExceptions={[]}
  groupToggle={false}
  onRefresh={[Function]}
  refreshing={false}
  showItemImage={false}
  tokenIsWaiting={false}
  updateGroupToggle={[MockFunction]}
/>
`;

exports[`CompletedWorklistScreen Tests rendering Worklist data Renders no worklist items when all are incomplete 1`] = `
<Worklist
  areas={[]}
  countryCode="MX"
  data={[]}
  dispatch={[MockFunction]}
  enableAreaFilter={false}
  error={null}
  filterCategories={[]}
  filterExceptions={[]}
  groupToggle={false}
  onRefresh={[Function]}
  refreshing={false}
  showItemImage={false}
  tokenIsWaiting={false}
  updateGroupToggle={[MockFunction]}
/>
`;

exports[`CompletedWorklistScreen Tests rendering Worklist data Renders no worklist items when there are none 1`] = `
<Worklist
  areas={[]}
  countryCode="MX"
  data={[]}
  dispatch={[MockFunction]}
  enableAreaFilter={false}
  error={null}
  filterCategories={[]}
  filterExceptions={[]}
  groupToggle={false}
  onRefresh={[Function]}
  refreshing={false}
  showItemImage={false}
  tokenIsWaiting={false}
  updateGroupToggle={[MockFunction]}
/>
`;

exports[`CompletedWorklistScreen Tests rendering Worklist data Renders only complete worklist items for a Worklist with incomplete & complete items 1`] = `
<Worklist
  areas={[]}
  countryCode="MX"
  data={
    [
      {
        "actionTaken": "ADD_TO_PICKLIST",
        "catgName": "FOODSERVICE",
        "catgNbr": 93,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "Nature Valley Sweet And Salty Nuts Granola Bars",
        "itemNbr": 1234567890,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "000055559999",
        "worklistStatus": "COMPLETED",
        "worklistType": "NSFL",
      },
      {
        "actionTaken": "QTY_UPDATE",
        "catgName": "ELECTRONICS",
        "catgNbr": 99,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "ELECTRONIC ITEM",
        "itemNbr": 987654321,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "777555333",
        "worklistStatus": "COMPLETED",
        "worklistType": "NO",
      },
      {
        "actionTaken": "QTY_UPDATE",
        "catgName": "FRESH BAKERY",
        "catgNbr": 88,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "BAKERY ITEM",
        "itemNbr": 123789456,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "111122223333",
        "worklistStatus": "COMPLETED",
        "worklistType": "NO",
      },
      {
        "actionTaken": "QTY_UPDATE",
        "catgName": "WINE",
        "catgNbr": 19,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "WINE ITEM",
        "itemNbr": 456789123,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "444455556666",
        "worklistStatus": "COMPLETED",
        "worklistType": "C",
      },
      {
        "actionTaken": "ADD_TO_PICKLIST",
        "catgName": "PHARMACY RX",
        "catgNbr": 87,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "PHARMACY ITEM",
        "itemNbr": 789123456,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "777788889999",
        "worklistStatus": "COMPLETED",
        "worklistType": "C",
      },
      {
        "actionTaken": "ADD_TO_PICKLIST",
        "catgName": "ELECTRONICS",
        "catgNbr": 199,
        "completed": true,
        "completedTs": undefined,
        "completedUserId": undefined,
        "itemName": "PHARMACY ITEM 1",
        "itemNbr": 789123457,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "667788889999",
        "worklistStatus": "COMPLETED",
        "worklistType": "NS",
      },
    ]
  }
  dispatch={[MockFunction]}
  enableAreaFilter={false}
  error={null}
  filterCategories={[]}
  filterExceptions={[]}
  groupToggle={false}
  onRefresh={[Function]}
  refreshing={false}
  showItemImage={false}
  tokenIsWaiting={false}
  updateGroupToggle={[MockFunction]}
/>
`;

exports[`CompletedWorklistScreen Tests rendering Worklist data Renders only complete worklist items for inProgress & complete items if 'inprogress' is enabled 1`] = `
<Worklist
  areas={[]}
  countryCode="MX"
  data={
    [
      {
        "actionTaken": "ADD_TO_PICKLIST",
        "catgName": "FOODSERVICE",
        "catgNbr": 93,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "Nature Valley Sweet And Salty Nuts Granola Bars",
        "itemNbr": 1234567890,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "000055559999",
        "worklistStatus": "COMPLETED",
        "worklistType": "NSFL",
      },
      {
        "actionTaken": "QTY_UPDATE",
        "catgName": "ELECTRONICS",
        "catgNbr": 99,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "ELECTRONIC ITEM",
        "itemNbr": 987654321,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "777555333",
        "worklistStatus": "COMPLETED",
        "worklistType": "NO",
      },
      {
        "actionTaken": "QTY_UPDATE",
        "catgName": "FRESH BAKERY",
        "catgNbr": 88,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "BAKERY ITEM",
        "itemNbr": 123789456,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "111122223333",
        "worklistStatus": "COMPLETED",
        "worklistType": "NO",
      },
      {
        "actionTaken": "QTY_UPDATE",
        "catgName": "WINE",
        "catgNbr": 19,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "WINE ITEM",
        "itemNbr": 456789123,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "444455556666",
        "worklistStatus": "COMPLETED",
        "worklistType": "C",
      },
      {
        "actionTaken": "ADD_TO_PICKLIST",
        "catgName": "PHARMACY RX",
        "catgNbr": 87,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "PHARMACY ITEM",
        "itemNbr": 789123456,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "777788889999",
        "worklistStatus": "COMPLETED",
        "worklistType": "C",
      },
      {
        "actionTaken": "ADD_TO_PICKLIST",
        "catgName": "ELECTRONICS",
        "catgNbr": 199,
        "completed": true,
        "completedTs": undefined,
        "completedUserId": undefined,
        "itemName": "PHARMACY ITEM 1",
        "itemNbr": 789123457,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "667788889999",
        "worklistStatus": "COMPLETED",
        "worklistType": "NS",
      },
    ]
  }
  dispatch={[MockFunction]}
  enableAreaFilter={false}
  error={null}
  filterCategories={[]}
  filterExceptions={[]}
  groupToggle={false}
  onRefresh={[Function]}
  refreshing={false}
  showItemImage={false}
  tokenIsWaiting={false}
  updateGroupToggle={[MockFunction]}
/>
`;

exports[`CompletedWorklistScreen Tests rendering Worklist data Renders worklist items for both inProgress & complete items 1`] = `
<Worklist
  areas={[]}
  countryCode="MX"
  data={
    [
      {
        "actionTaken": "ADD_TO_PICKLIST",
        "catgName": "FOODSERVICE",
        "catgNbr": 93,
        "completed": false,
        "completedTs": undefined,
        "completedUserId": undefined,
        "itemName": "Nature Valley Sweet And Salty Nuts Granola Bars",
        "itemNbr": 1234567890,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "000055559999",
        "worklistStatus": "IN_PROGRESS",
        "worklistType": "NSFL",
      },
      {
        "actionTaken": "QTY_UPDATE",
        "catgName": "ELECTRONICS",
        "catgNbr": 99,
        "completed": false,
        "completedTs": undefined,
        "completedUserId": undefined,
        "itemName": "ELECTRONIC ITEM",
        "itemNbr": 987654321,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "777555333",
        "worklistStatus": "IN_PROGRESS",
        "worklistType": "NO",
      },
      {
        "actionTaken": "QTY_UPDATE",
        "catgName": "FRESH BAKERY",
        "catgNbr": 88,
        "completed": false,
        "completedTs": undefined,
        "completedUserId": undefined,
        "itemName": "BAKERY ITEM",
        "itemNbr": 123789456,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "111122223333",
        "worklistStatus": "IN_PROGRESS",
        "worklistType": "NO",
      },
      {
        "actionTaken": "QTY_UPDATE",
        "catgName": "WINE",
        "catgNbr": 19,
        "completed": false,
        "completedTs": undefined,
        "completedUserId": undefined,
        "itemName": "WINE ITEM",
        "itemNbr": 456789123,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "444455556666",
        "worklistStatus": "IN_PROGRESS",
        "worklistType": "C",
      },
      {
        "actionTaken": "ADD_TO_PICKLIST",
        "catgName": "PHARMACY RX",
        "catgNbr": 87,
        "completed": false,
        "completedTs": undefined,
        "completedUserId": undefined,
        "itemName": "PHARMACY ITEM",
        "itemNbr": 789123456,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "777788889999",
        "worklistStatus": "IN_PROGRESS",
        "worklistType": "C",
      },
      {
        "actionTaken": "ADD_TO_PICKLIST",
        "catgName": "ELECTRONICS",
        "catgNbr": 199,
        "completed": false,
        "completedTs": undefined,
        "completedUserId": undefined,
        "itemName": "PHARMACY ITEM 1",
        "itemNbr": 789123457,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "667788889999",
        "worklistStatus": "IN_PROGRESS",
        "worklistType": "NS",
      },
      {
        "actionTaken": "ADD_TO_PICKLIST",
        "catgName": "FOODSERVICE",
        "catgNbr": 93,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "Nature Valley Sweet And Salty Nuts Granola Bars",
        "itemNbr": 1234567890,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "000055559999",
        "worklistStatus": "COMPLETED",
        "worklistType": "NSFL",
      },
      {
        "actionTaken": "QTY_UPDATE",
        "catgName": "ELECTRONICS",
        "catgNbr": 99,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "ELECTRONIC ITEM",
        "itemNbr": 987654321,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "777555333",
        "worklistStatus": "COMPLETED",
        "worklistType": "NO",
      },
      {
        "actionTaken": "QTY_UPDATE",
        "catgName": "FRESH BAKERY",
        "catgNbr": 88,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "BAKERY ITEM",
        "itemNbr": 123789456,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "111122223333",
        "worklistStatus": "COMPLETED",
        "worklistType": "NO",
      },
      {
        "actionTaken": "QTY_UPDATE",
        "catgName": "WINE",
        "catgNbr": 19,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "WINE ITEM",
        "itemNbr": 456789123,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "444455556666",
        "worklistStatus": "COMPLETED",
        "worklistType": "C",
      },
      {
        "actionTaken": "ADD_TO_PICKLIST",
        "catgName": "PHARMACY RX",
        "catgNbr": 87,
        "completed": true,
        "completedTs": "2020-07-15T08:02:17-05:00",
        "completedUserId": "SVCintlsamsops",
        "itemName": "PHARMACY ITEM",
        "itemNbr": 789123456,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "777788889999",
        "worklistStatus": "COMPLETED",
        "worklistType": "C",
      },
      {
        "actionTaken": "ADD_TO_PICKLIST",
        "catgName": "ELECTRONICS",
        "catgNbr": 199,
        "completed": true,
        "completedTs": undefined,
        "completedUserId": undefined,
        "itemName": "PHARMACY ITEM 1",
        "itemNbr": 789123457,
        "subCatgName": undefined,
        "subCatgNbr": 0,
        "upcNbr": "667788889999",
        "worklistStatus": "COMPLETED",
        "worklistType": "NS",
      },
    ]
  }
  dispatch={[MockFunction]}
  enableAreaFilter={false}
  error={null}
  filterCategories={[]}
  filterExceptions={[]}
  groupToggle={false}
  onRefresh={[Function]}
  refreshing={false}
  showItemImage={false}
  tokenIsWaiting={false}
  updateGroupToggle={[MockFunction]}
/>
`;

exports[`CompletedWorklistScreen Tests rendering worklist api responses Renders error message for failed worklist request 1`] = `
<Worklist
  areas={[]}
  countryCode="MX"
  dispatch={[MockFunction]}
  enableAreaFilter={false}
  error="Network Error"
  filterCategories={[]}
  filterExceptions={[]}
  groupToggle={false}
  onRefresh={[Function]}
  refreshing={false}
  showItemImage={false}
  tokenIsWaiting={false}
  updateGroupToggle={[MockFunction]}
/>
`;

exports[`CompletedWorklistScreen Tests rendering worklist api responses Renders refresh set to true when waiting for worklist api response 1`] = `
<Worklist
  areas={[]}
  countryCode="MX"
  dispatch={[MockFunction]}
  enableAreaFilter={false}
  error={null}
  filterCategories={[]}
  filterExceptions={[]}
  groupToggle={false}
  onRefresh={[Function]}
  refreshing={true}
  showItemImage={false}
  tokenIsWaiting={false}
  updateGroupToggle={[MockFunction]}
/>
`;
